# internal/handlers/order_handler.go
@@ -1,0 +1,147 @@
+package handlers
+
+import (
+	"bookstore-backend/internal/dto"
+	"bookstore-backend/internal/services"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
+)
+
+type OrderHandler struct {
+	orderService *services.OrderService
+}
+
+func NewOrderHandler(
+	db *gorm.DB,
+) *OrderHandler {
+
+	return &OrderHandler{
+		orderService: services.NewOrderService(db),
+	}
+}
+
+// CreateOrder godoc
+//
+//	@Summary		Create order
+//	@Description	Create a new order for the authenticated user
+//	@Tags			Orders
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			request	body		dto.CreateOrderRequest	true	"Order Request"
+//	@Success		201		{object}	dto.CreateOrderResponse
+//	@Failure		400		{object}	map[string]string
+//	@Failure		401		{object}	map[string]string
+//	@Failure		403		{object}	map[string]string
+//	@Failure		404		{object}	map[string]string
+//	@Failure		500		{object}	map[string]string
+//	@Router			/orders [post]
+func (h *OrderHandler) CreateOrder(
+	c *gin.Context,
+) {
+
+	// -------------------------
+	// Bind Request
+	// -------------------------
+
+	var request dto.CreateOrderRequest
+
+	if err :=
+		c.ShouldBindJSON(
+			&request,
+		); err != nil {
+
+		c.JSON(
+			http.StatusBadRequest,
+			gin.H{
+				"error": err.Error(),
+			},
+		)
+
+		return
+	}
+
+	// -------------------------
+	// Get User ID
+	// -------------------------
+
+	userIDValue, exists :=
+		c.Get("userID")
+
+	if !exists {
+
+		c.JSON(
+			http.StatusUnauthorized,
+			gin.H{
+				"error": "unauthorized",
+			},
+		)
+
+		return
+	}
+
+	userID :=
+		userIDValue.(uint)
+
+	// -------------------------
+	// Create Order
+	// -------------------------
+
+	response, err :=
+		h.orderService.CreateOrder(
+			userID,
+			request,
+		)
+
+	if err != nil {
+
+		switch err.Error() {
+
+		case "address is required",
+			"order must contain at least one book",
+			"quantity must be greater than 0",
+			"duplicate books are not allowed",
+			"not enough stock":
+
+			c.JSON(
+				http.StatusBadRequest,
+				gin.H{
+					"error": err.Error(),
+				},
+			)
+
+			return
+
+		case "book not found":
+
+			c.JSON(
+				http.StatusNotFound,
+				gin.H{
+					"error": err.Error(),
+				},
+			)
+
+			return
+		}
+
+		c.JSON(
+			http.StatusInternalServerError,
+			gin.H{
+				"error": "internal server error",
+			},
+		)
+
+		return
+	}
+
+	// -------------------------
+	// Success
+	// -------------------------
+
+	c.JSON(
+		http.StatusCreated,
+		response,
+	)
+}
